// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bookmark renders the Bookmark icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`Bookmark renders the Bookmark icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      Bookmark icon
    </title>
    <path
      d="M17,3 L7,3 C5.9,3 5.01,3.9 5.01,5 L5,21 L12,18 L19,21 L19,5 C19,3.9 18.1,3 17,3 L17,3 Z M17,18 L12,15.82 L7,18 L7,5 L17,5 L17,18 L17,18 Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Bookmark renders the Bookmark icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <path
      d="M17,3 L7,3 C5.9,3 5.01,3.9 5.01,5 L5,21 L12,18 L19,21 L19,5 C19,3.9 18.1,3 17,3 L17,3 Z M17,18 L12,15.82 L7,18 L7,5 L17,5 L17,18 L17,18 Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Circle renders the Circle icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`Circle renders the Circle icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      Circle
    </title>
    <circle
      cx="12"
      cy="12"
      r="12"
    />
  </svg>
</DocumentFragment>
`;

exports[`Circle renders the Circle icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <circle
      cx="12"
      cy="12"
      r="12"
    />
  </svg>
</DocumentFragment>
`;

exports[`Comment renders the Comment icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`Comment renders the Comment icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      Comment icon
    </title>
    <path
      d="M20,2 L4,2 C2.9,2 2,2.9 2,4 L2,16 C2,17.1 2.9,18 4,18 L18,18 L22,22 L22,4 C22,2.9 21.1,2 20,2 L20,2 Z M18,14 L6,14 L6,12 L18,12 L18,14 L18,14 Z M18,11 L6,11 L6,9 L18,9 L18,11 L18,11 Z M18,8 L6,8 L6,6 L18,6 L18,8 L18,8 Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Comment renders the Comment icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <path
      d="M20,2 L4,2 C2.9,2 2,2.9 2,4 L2,16 C2,17.1 2.9,18 4,18 L18,18 L22,22 L22,4 C22,2.9 21.1,2 20,2 L20,2 Z M18,14 L6,14 L6,12 L18,12 L18,14 L18,14 Z M18,11 L6,11 L6,9 L18,9 L18,11 L18,11 Z M18,8 L6,8 L6,6 L18,6 L18,8 L18,8 Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`CopyLink renders the CopyLink icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`CopyLink renders the CopyLink icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      Copy icon
    </title>
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
    />
  </svg>
</DocumentFragment>
`;

exports[`CopyLink renders the CopyLink icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Email renders the Email icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`Email renders the Email icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      Email icon
    </title>
    <path
      d="M20,4 L4,4 C2.9,4 2.01,4.9 2.01,6 L2,18 C2,19.1 2.9,20 4,20 L20,20 C21.1,20 22,19.1 22,18 L22,6 C22,4.9 21.1,4 20,4 L20,4 Z M20,8 L12,13 L4,8 L4,6 L12,11 L20,6 L20,8 L20,8 Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Email renders the Email icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <path
      d="M20,4 L4,4 C2.9,4 2.01,4.9 2.01,6 L2,18 C2,19.1 2.9,20 4,20 L20,20 C21.1,20 22,19.1 22,18 L22,6 C22,4.9 21.1,4 20,4 L20,4 Z M20,8 L12,13 L4,8 L4,6 L12,11 L20,6 L20,8 L20,8 Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Facebook renders the Facebook icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`Facebook renders the Facebook icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 1365.3333 1365.3333"
  >
    <title
      id="mock-bui-1"
    >
      Facebook icon
    </title>
    <g
      transform="matrix(1.3333333,0,0,-1.3333333,0,1365.3333)"
    >
      <g
        transform="scale(0.1)"
      >
        <path
          d="m 10240,5120 c 0,2827.7 -2292.3,5120 -5120,5120 C 2292.3,10240 0,7947.7 0,5120 0,2564.46 1872.31,446.301 4320,62.1992 V 3640 H 3020 v 1480 h 1300 v 1128 c 0,1283.2 764.38,1992 1933.9,1992 560.17,0 1146.1,-100 1146.1,-100 V 6880 H 6754.38 C 6118.35,6880 5920,6485.33 5920,6080.43 V 5120 H 7340 L 7113,3640 H 5920 V 62.1992 C 8367.69,446.301 10240,2564.46 10240,5120"
          fill="#1877f2"
        />
        <path
          d="m 7113,3640 227,1480 H 5920 v 960.43 c 0,404.9 198.35,799.57 834.38,799.57 H 7400 v 1260 c 0,0 -585.93,100 -1146.1,100 C 5084.38,8240 4320,7531.2 4320,6248 V 5120 H 3020 V 3640 H 4320 V 62.1992 C 4580.67,21.3008 4847.84,0 5120,0 c 272.16,0 539.33,21.3008 800,62.1992 V 3640 h 1193"
          fill="#ffffff"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Facebook renders the Facebook icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 1365.3333 1365.3333"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <g
      transform="matrix(1.3333333,0,0,-1.3333333,0,1365.3333)"
    >
      <g
        transform="scale(0.1)"
      >
        <path
          d="m 10240,5120 c 0,2827.7 -2292.3,5120 -5120,5120 C 2292.3,10240 0,7947.7 0,5120 0,2564.46 1872.31,446.301 4320,62.1992 V 3640 H 3020 v 1480 h 1300 v 1128 c 0,1283.2 764.38,1992 1933.9,1992 560.17,0 1146.1,-100 1146.1,-100 V 6880 H 6754.38 C 6118.35,6880 5920,6485.33 5920,6080.43 V 5120 H 7340 L 7113,3640 H 5920 V 62.1992 C 8367.69,446.301 10240,2564.46 10240,5120"
          fill="#1877f2"
        />
        <path
          d="m 7113,3640 227,1480 H 5920 v 960.43 c 0,404.9 198.35,799.57 834.38,799.57 H 7400 v 1260 c 0,0 -585.93,100 -1146.1,100 C 5084.38,8240 4320,7531.2 4320,6248 V 5120 H 3020 V 3640 H 4320 V 62.1992 C 4580.67,21.3008 4847.84,0 5120,0 c 272.16,0 539.33,21.3008 800,62.1992 V 3640 h 1193"
          fill="#ffffff"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Forward10 renders the Forward10 icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`Forward10 renders the Forward10 icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      Forward10 icon
    </title>
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M18 13c0 3.31-2.69 6-6 6s-6-2.69-6-6 2.69-6 6-6v4l5-5-5-5v4c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8h-2z"
    />
    <path
      d="M10.86 15.94v-4.27h-.09L9 12.3v.69l1.01-.31v3.26zM12.25 13.44v.74c0 1.9 1.31 1.82 1.44 1.82.14 0 1.44.09 1.44-1.82v-.74c0-1.9-1.31-1.82-1.44-1.82-.14 0-1.44-.09-1.44 1.82zm2.04-.12v.97c0 .77-.21 1.03-.59 1.03s-.6-.26-.6-1.03v-.97c0-.75.22-1.01.59-1.01.38-.01.6.26.6 1.01z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Forward10 renders the Forward10 icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M18 13c0 3.31-2.69 6-6 6s-6-2.69-6-6 2.69-6 6-6v4l5-5-5-5v4c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8h-2z"
    />
    <path
      d="M10.86 15.94v-4.27h-.09L9 12.3v.69l1.01-.31v3.26zM12.25 13.44v.74c0 1.9 1.31 1.82 1.44 1.82.14 0 1.44.09 1.44-1.82v-.74c0-1.9-1.31-1.82-1.44-1.82-.14 0-1.44-.09-1.44 1.82zm2.04-.12v.97c0 .77-.21 1.03-.59 1.03s-.6-.26-.6-1.03v-.97c0-.75.22-1.01.59-1.01.38-.01.6.26.6 1.01z"
    />
  </svg>
</DocumentFragment>
`;

exports[`GitHub renders the GitHub icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`GitHub renders the GitHub icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 16 16"
  >
    <title
      id="mock-bui-1"
    >
      GitHub icon
    </title>
    <path
      d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"
      fill="#000000"
      fill-rule="evenodd"
    />
  </svg>
</DocumentFragment>
`;

exports[`GitHub renders the GitHub icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 16 16"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <path
      d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"
      fill="#000000"
      fill-rule="evenodd"
    />
  </svg>
</DocumentFragment>
`;

exports[`Menu renders the Menu icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`Menu renders the Menu icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      Menu icon
    </title>
    <rect
      height="2"
      rx="1"
      width="16"
      x="4"
      y="11"
    />
    <rect
      height="2"
      rx="1"
      width="16"
      x="4"
      y="5"
    />
    <rect
      height="2"
      rx="1"
      width="16"
      x="4"
      y="17"
    />
  </svg>
</DocumentFragment>
`;

exports[`Menu renders the Menu icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <rect
      height="2"
      rx="1"
      width="16"
      x="4"
      y="11"
    />
    <rect
      height="2"
      rx="1"
      width="16"
      x="4"
      y="5"
    />
    <rect
      height="2"
      rx="1"
      width="16"
      x="4"
      y="17"
    />
  </svg>
</DocumentFragment>
`;

exports[`Pause renders the Pause icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`Pause renders the Pause icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      Pause
    </title>
    <path
      d="M6,19 L10,19 L10,5 L6,5 L6,19 Z M14,5 L14,19 L18,19 L18,5 L14,5 Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Pause renders the Pause icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <path
      d="M6,19 L10,19 L10,5 L6,5 L6,19 Z M14,5 L14,19 L18,19 L18,5 L14,5 Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Placeholder renders the Placeholder icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`Placeholder renders the Placeholder icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 88 88"
  >
    <title
      id="mock-bui-1"
    >
      Placeholder
    </title>
    <path
      d="M 88 40 L 88 80 L 0 80 L 0 40 L 88 40 L 88 40 Z  M 47 48 L 43 48 L 43 72 L 47 72 L 47 48 L 47 48 Z  M 13 48 L 9 48 L 9 72 L 13 72 L 13 66 L 17 62 L 27 72 L 33 72 L 20 59 L 31 48 L 25 48 L 13 60 L 13 48 L 13 48 Z  M 79 48 L 59 48 L 59 52 L 67 52 L 67 72 L 71 72 L 71 52 L 79 52 L 79 48 L 79 48 Z M 78.402 19.096 C 78.668 19.136 78.935 19.234 79.179 19.355 C 79.77 19.644 80.06 20.151 79.99 20.702 C 79.902 21.371 79.378 21.978 78.751 22.04 C 78.377 22.076 77.994 21.987 77.614 21.959 C 76.942 21.91 76.267 21.791 75.602 21.832 C 74.663 21.891 74.199 22.465 74.325 23.431 C 74.399 23.995 74.575 24.612 74.894 25.058 C 75.747 26.26 76.691 27.394 77.621 28.534 C 78.318 29.387 78.49 30.103 78.116 30.855 C 77.676 31.741 76.923 32.098 75.87 31.977 C 73.709 31.724 71.547 31.48 69.383 31.259 C 67.983 31.115 67.619 30.373 68.414 29.167 C 68.594 28.893 68.849 28.659 69.099 28.446 C 69.419 28.173 69.712 28.172 70.133 28.39 C 70.741 28.704 71.432 28.894 72.108 29.003 C 72.952 29.143 73.818 29.151 74.673 29.206 C 74.812 29.215 74.953 29.17 75.21 29.137 C 74.588 28.338 73.999 27.661 73.502 26.92 C 72.951 26.103 72.366 25.274 72.008 24.362 C 71.319 22.61 71.971 20.861 73.571 19.951 C 75.075 19.097 76.704 18.837 78.402 19.096 Z  M 38.897 18.002 C 39.863 18.023 40.726 18.329 41.188 19.285 C 41.663 20.267 41.375 21.185 40.784 22.015 C 39.919 23.23 38.744 24.081 37.506 24.806 C 36.152 25.597 34.736 26.275 33.287 27.035 C 33.415 28.221 34.284 29.143 35.612 29.436 C 37.116 29.768 38.562 29.489 39.96 28.91 C 42.021 28.058 43.901 26.872 45.573 25.358 C 46.072 24.906 46.64 24.447 46.618 23.62 C 46.615 23.524 46.801 23.385 46.925 23.333 C 48.235 22.792 49.452 23.586 49.568 25.042 C 49.624 25.748 49.678 26.453 49.745 27.157 C 49.76 27.315 49.812 27.474 49.865 27.624 C 50.177 28.51 50.633 28.678 51.209 27.983 C 52.257 26.715 53.246 25.39 54.189 24.033 C 54.67 23.339 54.972 23.068 55.645 23.202 C 56.25 23.322 56.623 23.779 56.689 24.558 C 56.772 25.547 56.777 26.544 56.9 27.524 C 56.954 27.93 57.228 28.305 57.399 28.693 C 57.756 28.478 58.192 28.336 58.454 28.032 C 59.347 26.989 60.184 25.894 61.03 24.811 C 62.132 23.4 62.533 23.276 64.195 23.806 C 65.596 24.255 66.947 24.103 68.284 23.469 C 68.704 23.272 69.223 23.207 69.688 23.233 C 70.383 23.276 70.877 23.803 70.982 24.439 C 71.08 25.025 70.769 25.641 70.111 25.936 C 68.391 26.704 66.595 27.087 64.758 26.542 C 63.89 26.285 63.294 26.483 62.743 27.143 C 62.027 27.998 61.351 28.896 60.568 29.682 C 59.846 30.405 59.061 31.099 58.204 31.633 C 57.101 32.317 56.007 32.026 55.295 30.915 C 54.839 30.206 54.554 29.38 54.2 28.624 C 53.67 29.219 53.133 29.911 52.506 30.504 C 52.008 30.974 51.441 31.405 50.836 31.704 C 49.674 32.278 48.778 32.004 48.163 30.829 C 47.742 30.023 47.517 29.105 47.209 28.235 C 47.156 28.087 47.126 27.933 47.075 27.745 C 46.108 28.35 45.195 28.959 44.246 29.505 C 42.224 30.667 40.129 31.643 37.802 31.919 C 36.454 32.081 35.114 32.01 33.814 31.572 C 32.062 30.982 30.916 29.804 30.553 27.881 C 30.531 27.762 30.49 27.648 30.456 27.534 C 29.89 27.484 29.313 27.51 28.781 27.363 C 28.313 27.231 27.827 26.982 27.468 26.645 C 26.764 25.985 26.881 24.793 27.638 24.191 C 27.914 23.97 28.132 23.989 28.506 24.127 C 29.156 24.365 29.896 24.351 30.602 24.38 C 30.712 24.384 30.868 24.073 30.946 23.881 C 31.828 21.702 33.133 19.915 35.224 18.854 C 36.381 18.266 37.608 17.973 38.897 18.002 Z  M 33.875 8 C 35.123 8.639 35.317 9.319 34.535 10.516 C 34.192 11.04 33.79 11.53 33.376 12.004 C 30.968 14.755 29.131 17.885 27.446 21.093 C 25.844 24.146 24.402 27.281 22.916 30.395 C 22.329 31.626 20.985 31.969 19.946 31.055 C 19.742 30.874 19.574 30.528 19.576 30.26 C 19.596 28.475 18.924 26.825 18.63 25.107 C 18.235 22.785 18.004 20.435 17.708 18.154 C 17.721 18.137 17.625 18.234 17.566 18.351 C 15.818 21.718 14.065 25.083 12.337 28.462 C 11.976 29.169 11.683 29.906 11.739 30.753 C 11.756 31.009 11.487 31.386 11.242 31.533 C 10.851 31.77 10.376 31.978 9.928 31.996 C 8.105 32.064 7.526 31.196 8.4 29.615 C 9.811 27.062 11.346 24.577 12.759 22.025 C 13.866 20.023 14.911 17.985 15.893 15.921 C 16.279 15.109 16.452 14.191 16.661 13.309 C 16.741 12.979 16.832 12.771 17.186 12.78 C 17.682 12.795 18.185 12.77 18.669 12.858 C 19.572 13.021 20.028 13.543 20.094 14.47 C 20.223 16.312 20.343 18.157 20.431 20.003 C 20.541 22.303 21.037 24.525 21.752 26.841 C 21.882 26.613 21.97 26.485 22.034 26.344 C 24.55 20.861 27.446 15.581 30.647 10.463 C 31.253 9.495 31.878 8.536 32.955 8 L 33.875 8 L 33.875 8 Z  M 37.226 21.05 C 36.447 21.515 35.67 22.009 34.958 22.595 C 34.572 22.912 34.315 23.436 34 23.866 C 34.033 23.909 34.068 23.955 34.101 24 C 34.437 23.852 34.789 23.743 35.103 23.551 C 35.959 23.027 36.814 22.496 37.633 21.901 C 37.829 21.761 37.882 21.359 38 21.077 C 37.739 21.061 37.426 20.93 37.226 21.05 Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Placeholder renders the Placeholder icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 88 88"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <path
      d="M 88 40 L 88 80 L 0 80 L 0 40 L 88 40 L 88 40 Z  M 47 48 L 43 48 L 43 72 L 47 72 L 47 48 L 47 48 Z  M 13 48 L 9 48 L 9 72 L 13 72 L 13 66 L 17 62 L 27 72 L 33 72 L 20 59 L 31 48 L 25 48 L 13 60 L 13 48 L 13 48 Z  M 79 48 L 59 48 L 59 52 L 67 52 L 67 72 L 71 72 L 71 52 L 79 52 L 79 48 L 79 48 Z M 78.402 19.096 C 78.668 19.136 78.935 19.234 79.179 19.355 C 79.77 19.644 80.06 20.151 79.99 20.702 C 79.902 21.371 79.378 21.978 78.751 22.04 C 78.377 22.076 77.994 21.987 77.614 21.959 C 76.942 21.91 76.267 21.791 75.602 21.832 C 74.663 21.891 74.199 22.465 74.325 23.431 C 74.399 23.995 74.575 24.612 74.894 25.058 C 75.747 26.26 76.691 27.394 77.621 28.534 C 78.318 29.387 78.49 30.103 78.116 30.855 C 77.676 31.741 76.923 32.098 75.87 31.977 C 73.709 31.724 71.547 31.48 69.383 31.259 C 67.983 31.115 67.619 30.373 68.414 29.167 C 68.594 28.893 68.849 28.659 69.099 28.446 C 69.419 28.173 69.712 28.172 70.133 28.39 C 70.741 28.704 71.432 28.894 72.108 29.003 C 72.952 29.143 73.818 29.151 74.673 29.206 C 74.812 29.215 74.953 29.17 75.21 29.137 C 74.588 28.338 73.999 27.661 73.502 26.92 C 72.951 26.103 72.366 25.274 72.008 24.362 C 71.319 22.61 71.971 20.861 73.571 19.951 C 75.075 19.097 76.704 18.837 78.402 19.096 Z  M 38.897 18.002 C 39.863 18.023 40.726 18.329 41.188 19.285 C 41.663 20.267 41.375 21.185 40.784 22.015 C 39.919 23.23 38.744 24.081 37.506 24.806 C 36.152 25.597 34.736 26.275 33.287 27.035 C 33.415 28.221 34.284 29.143 35.612 29.436 C 37.116 29.768 38.562 29.489 39.96 28.91 C 42.021 28.058 43.901 26.872 45.573 25.358 C 46.072 24.906 46.64 24.447 46.618 23.62 C 46.615 23.524 46.801 23.385 46.925 23.333 C 48.235 22.792 49.452 23.586 49.568 25.042 C 49.624 25.748 49.678 26.453 49.745 27.157 C 49.76 27.315 49.812 27.474 49.865 27.624 C 50.177 28.51 50.633 28.678 51.209 27.983 C 52.257 26.715 53.246 25.39 54.189 24.033 C 54.67 23.339 54.972 23.068 55.645 23.202 C 56.25 23.322 56.623 23.779 56.689 24.558 C 56.772 25.547 56.777 26.544 56.9 27.524 C 56.954 27.93 57.228 28.305 57.399 28.693 C 57.756 28.478 58.192 28.336 58.454 28.032 C 59.347 26.989 60.184 25.894 61.03 24.811 C 62.132 23.4 62.533 23.276 64.195 23.806 C 65.596 24.255 66.947 24.103 68.284 23.469 C 68.704 23.272 69.223 23.207 69.688 23.233 C 70.383 23.276 70.877 23.803 70.982 24.439 C 71.08 25.025 70.769 25.641 70.111 25.936 C 68.391 26.704 66.595 27.087 64.758 26.542 C 63.89 26.285 63.294 26.483 62.743 27.143 C 62.027 27.998 61.351 28.896 60.568 29.682 C 59.846 30.405 59.061 31.099 58.204 31.633 C 57.101 32.317 56.007 32.026 55.295 30.915 C 54.839 30.206 54.554 29.38 54.2 28.624 C 53.67 29.219 53.133 29.911 52.506 30.504 C 52.008 30.974 51.441 31.405 50.836 31.704 C 49.674 32.278 48.778 32.004 48.163 30.829 C 47.742 30.023 47.517 29.105 47.209 28.235 C 47.156 28.087 47.126 27.933 47.075 27.745 C 46.108 28.35 45.195 28.959 44.246 29.505 C 42.224 30.667 40.129 31.643 37.802 31.919 C 36.454 32.081 35.114 32.01 33.814 31.572 C 32.062 30.982 30.916 29.804 30.553 27.881 C 30.531 27.762 30.49 27.648 30.456 27.534 C 29.89 27.484 29.313 27.51 28.781 27.363 C 28.313 27.231 27.827 26.982 27.468 26.645 C 26.764 25.985 26.881 24.793 27.638 24.191 C 27.914 23.97 28.132 23.989 28.506 24.127 C 29.156 24.365 29.896 24.351 30.602 24.38 C 30.712 24.384 30.868 24.073 30.946 23.881 C 31.828 21.702 33.133 19.915 35.224 18.854 C 36.381 18.266 37.608 17.973 38.897 18.002 Z  M 33.875 8 C 35.123 8.639 35.317 9.319 34.535 10.516 C 34.192 11.04 33.79 11.53 33.376 12.004 C 30.968 14.755 29.131 17.885 27.446 21.093 C 25.844 24.146 24.402 27.281 22.916 30.395 C 22.329 31.626 20.985 31.969 19.946 31.055 C 19.742 30.874 19.574 30.528 19.576 30.26 C 19.596 28.475 18.924 26.825 18.63 25.107 C 18.235 22.785 18.004 20.435 17.708 18.154 C 17.721 18.137 17.625 18.234 17.566 18.351 C 15.818 21.718 14.065 25.083 12.337 28.462 C 11.976 29.169 11.683 29.906 11.739 30.753 C 11.756 31.009 11.487 31.386 11.242 31.533 C 10.851 31.77 10.376 31.978 9.928 31.996 C 8.105 32.064 7.526 31.196 8.4 29.615 C 9.811 27.062 11.346 24.577 12.759 22.025 C 13.866 20.023 14.911 17.985 15.893 15.921 C 16.279 15.109 16.452 14.191 16.661 13.309 C 16.741 12.979 16.832 12.771 17.186 12.78 C 17.682 12.795 18.185 12.77 18.669 12.858 C 19.572 13.021 20.028 13.543 20.094 14.47 C 20.223 16.312 20.343 18.157 20.431 20.003 C 20.541 22.303 21.037 24.525 21.752 26.841 C 21.882 26.613 21.97 26.485 22.034 26.344 C 24.55 20.861 27.446 15.581 30.647 10.463 C 31.253 9.495 31.878 8.536 32.955 8 L 33.875 8 L 33.875 8 Z  M 37.226 21.05 C 36.447 21.515 35.67 22.009 34.958 22.595 C 34.572 22.912 34.315 23.436 34 23.866 C 34.033 23.909 34.068 23.955 34.101 24 C 34.437 23.852 34.789 23.743 35.103 23.551 C 35.959 23.027 36.814 22.496 37.633 21.901 C 37.829 21.761 37.882 21.359 38 21.077 C 37.739 21.061 37.426 20.93 37.226 21.05 Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Play renders the Play icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`Play renders the Play icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      Play
    </title>
    <polygon
      points="8 5 8 19 19 12"
    />
  </svg>
</DocumentFragment>
`;

exports[`Play renders the Play icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <polygon
      points="8 5 8 19 19 12"
    />
  </svg>
</DocumentFragment>
`;

exports[`Popout renders the Popout icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`Popout renders the Popout icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      Popout
    </title>
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Popout renders the Popout icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Replay10 renders the Replay10 icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`Replay10 renders the Replay10 icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      Replay10 icon
    </title>
    <path
      d="M12 5V1L7 6l5 5V7c3.3 0 6 2.7 6 6s-2.7 6-6 6-6-2.7-6-6H4c0 4.4 3.6 8 8 8s8-3.6 8-8-3.6-8-8-8zm-1.1 11H10v-3.3L9 13v-.7l1.8-.6h.1V16zm4.3-1.8c0 .3 0 .6-.1.8l-.3.6s-.3.3-.5.3-.4.1-.6.1-.4 0-.6-.1-.3-.2-.5-.3-.2-.3-.3-.6-.1-.5-.1-.8v-.7c0-.3 0-.6.1-.8l.3-.6s.3-.3.5-.3.4-.1.6-.1.4 0 .6.1c.2.1.3.2.5.3s.2.3.3.6.1.5.1.8v.7zm-.9-.8v-.5s-.1-.2-.1-.3-.1-.1-.2-.2-.2-.1-.3-.1-.2 0-.3.1l-.2.2s-.1.2-.1.3v2s.1.2.1.3.1.1.2.2.2.1.3.1.2 0 .3-.1l.2-.2s.1-.2.1-.3v-1.5z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Replay10 renders the Replay10 icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <path
      d="M12 5V1L7 6l5 5V7c3.3 0 6 2.7 6 6s-2.7 6-6 6-6-2.7-6-6H4c0 4.4 3.6 8 8 8s8-3.6 8-8-3.6-8-8-8zm-1.1 11H10v-3.3L9 13v-.7l1.8-.6h.1V16zm4.3-1.8c0 .3 0 .6-.1.8l-.3.6s-.3.3-.5.3-.4.1-.6.1-.4 0-.6-.1-.3-.2-.5-.3-.2-.3-.3-.6-.1-.5-.1-.8v-.7c0-.3 0-.6.1-.8l.3-.6s.3-.3.5-.3.4-.1.6-.1.4 0 .6.1c.2.1.3.2.5.3s.2.3.3.6.1.5.1.8v.7zm-.9-.8v-.5s-.1-.2-.1-.3-.1-.1-.2-.2-.2-.1-.3-.1-.2 0-.3.1l-.2.2s-.1.2-.1.3v2s.1.2.1.3.1.1.2.2.2.1.3.1.2 0 .3-.1l.2-.2s.1-.2.1-.3v-1.5z"
    />
  </svg>
</DocumentFragment>
`;

exports[`SaveActive renders the SaveActive icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`SaveActive renders the SaveActive icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      Save active icon
    </title>
    <polygon
      points="12 17.27 18.18 21 16.54 13.97 22 9.24 14.81 8.63 12 2 9.19 8.63 2 9.24 7.46 13.97 5.82 21"
      stroke="none"
    />
  </svg>
</DocumentFragment>
`;

exports[`SaveActive renders the SaveActive icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <polygon
      points="12 17.27 18.18 21 16.54 13.97 22 9.24 14.81 8.63 12 2 9.19 8.63 2 9.24 7.46 13.97 5.82 21"
      stroke="none"
    />
  </svg>
</DocumentFragment>
`;

exports[`SaveInactive renders the SaveInactive icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`SaveInactive renders the SaveInactive icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      Save inactive icon
    </title>
    <path
      d="M22,9.24 L14.81,8.62 L12,2 L9.19,8.63 L2,9.24 L7.46,13.97 L5.82,21 L12,17.27 L18.18,21 L16.55,13.97 L22,9.24 L22,9.24 Z M12,15.4 L8.24,17.67 L9.24,13.39 L5.92,10.51 L10.3,10.13 L12,6.1 L13.71,10.14 L18.09,10.52 L14.77,13.4 L15.77,17.68 L12,15.4 L12,15.4 Z"
      stroke="none"
    />
  </svg>
</DocumentFragment>
`;

exports[`SaveInactive renders the SaveInactive icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <path
      d="M22,9.24 L14.81,8.62 L12,2 L9.19,8.63 L2,9.24 L7.46,13.97 L5.82,21 L12,17.27 L18.18,21 L16.55,13.97 L22,9.24 L22,9.24 Z M12,15.4 L8.24,17.67 L9.24,13.39 L5.92,10.51 L10.3,10.13 L12,6.1 L13.71,10.14 L18.09,10.52 L14.77,13.4 L15.77,17.68 L12,15.4 L12,15.4 Z"
      stroke="none"
    />
  </svg>
</DocumentFragment>
`;

exports[`SkipNext renders the SkipNext icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`SkipNext renders the SkipNext icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      SkipNext icon
    </title>
    <path
      d="M6 18l8.5-6L6 6v12zM16 6v12h2V6h-2z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
</DocumentFragment>
`;

exports[`SkipNext renders the SkipNext icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <path
      d="M6 18l8.5-6L6 6v12zM16 6v12h2V6h-2z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
</DocumentFragment>
`;

exports[`SkipPrevious renders the SkipPrevious icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`SkipPrevious renders the SkipPrevious icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      SkipPrevious icon
    </title>
    <path
      d="M6 6h2v12H6zm3.5 6l8.5 6V6z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
</DocumentFragment>
`;

exports[`SkipPrevious renders the SkipPrevious icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <path
      d="M6 6h2v12H6zm3.5 6l8.5 6V6z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
</DocumentFragment>
`;

exports[`Square renders the Square icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`Square renders the Square icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      Square
    </title>
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M6 6h12v12H6z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Square renders the Square icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M6 6h12v12H6z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Twitter renders the Twitter icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`Twitter renders the Twitter icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 400 400"
  >
    <title
      id="mock-bui-1"
    >
      Twitter logo
    </title>
    <g>
      <circle
        cx="200"
        cy="200"
        fill="#1DA1F2"
        r="200"
      />
    </g>
    <g>
      <path
        d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25
		c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2
		c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2
		c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7
		c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7
		C110.8,297.5,136.2,305.5,163.4,305.5"
        fill="#FFFFFF"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Twitter renders the Twitter icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 400 400"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <g>
      <circle
        cx="200"
        cy="200"
        fill="#1DA1F2"
        r="200"
      />
    </g>
    <g>
      <path
        d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25
		c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2
		c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2
		c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7
		c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7
		C110.8,297.5,136.2,305.5,163.4,305.5"
        fill="#FFFFFF"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`VolumeDown renders the VolumeDown icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`VolumeDown renders the VolumeDown icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      Volume down
    </title>
    <path
      d="M18.5 12c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM5 9v6h4l5 5V4L9 9H5z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
</DocumentFragment>
`;

exports[`VolumeDown renders the VolumeDown icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <path
      d="M18.5 12c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM5 9v6h4l5 5V4L9 9H5z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
</DocumentFragment>
`;

exports[`VolumeMute renders the VolumeMute icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`VolumeMute renders the VolumeMute icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      Volume mute
    </title>
    <path
      d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v2.21l2.45 2.45c.03-.2.05-.41.05-.63zm2.5 0c0 .94-.2 1.82-.54 2.64l1.51 1.51C20.63 14.91 21 13.5 21 12c0-4.28-2.99-7.86-7-8.77v2.06c2.89.86 5 3.54 5 6.71zM4.27 3L3 4.27 7.73 9H3v6h4l5 5v-6.73l4.25 4.25c-.67.52-1.42.93-2.25 1.18v2.06c1.38-.31 2.63-.95 3.69-1.81L19.73 21 21 19.73l-9-9L4.27 3zM12 4L9.91 6.09 12 8.18V4z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
</DocumentFragment>
`;

exports[`VolumeMute renders the VolumeMute icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <path
      d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v2.21l2.45 2.45c.03-.2.05-.41.05-.63zm2.5 0c0 .94-.2 1.82-.54 2.64l1.51 1.51C20.63 14.91 21 13.5 21 12c0-4.28-2.99-7.86-7-8.77v2.06c2.89.86 5 3.54 5 6.71zM4.27 3L3 4.27 7.73 9H3v6h4l5 5v-6.73l4.25 4.25c-.67.52-1.42.93-2.25 1.18v2.06c1.38-.31 2.63-.95 3.69-1.81L19.73 21 21 19.73l-9-9L4.27 3zM12 4L9.91 6.09 12 8.18V4z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
</DocumentFragment>
`;

exports[`VolumeUp renders the VolumeUp icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`VolumeUp renders the VolumeUp icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      Volume up
    </title>
    <title>
      Volume up
    </title>
    <path
      d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
</DocumentFragment>
`;

exports[`VolumeUp renders the VolumeUp icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <title>
      override title value
    </title>
    <path
      d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
</DocumentFragment>
`;

exports[`WhatsApp renders the WhatsApp icon from theme override 1`] = `
<DocumentFragment>
  <svg>
    <path>
      a different icon
    </path>
  </svg>
</DocumentFragment>
`;

exports[`WhatsApp renders the WhatsApp icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 400 400"
  >
    <title
      id="mock-bui-1"
    >
      WhatsApp Logo
    </title>
    <g>
      <circle
        cx="200"
        cy="200"
        fill="#25D366"
        r="200"
      />
    </g>
    <g
      transform="rotate(-90 200.0000152587891,200)"
    >
      <g>
        <path
          d="m257.94568,174.77384c-3.14674,1.57488 -18.61776,9.1866 -21.50242,10.23793c-2.88406,1.05012 -4.98189,1.57428 -7.07971,-1.57488c-2.09783,-3.14976 -8.12863,-10.23853 -9.96437,-12.33877c-1.83515,-2.09964 -3.67089,-2.36353 -6.81763,-0.78744c-3.14674,1.57488 -13.28624,4.89734 -25.30556,15.61897c-9.35447,8.34421 -15.67029,18.64856 -17.50544,21.79892c-1.83575,3.15036 -0.19626,4.85326 1.37923,6.4221c1.41606,1.41002 3.14734,3.67573 4.72041,5.51329c1.57367,1.83696 2.09783,3.15036 3.14674,5.2494c1.04891,2.10085 0.52476,3.9378 -0.26268,5.51268c-0.78623,1.57488 -7.07971,17.06462 -9.70169,23.36595c-2.55435,6.13527 -5.14855,5.30435 -7.08032,5.40157c-1.83333,0.09118 -3.93358,0.11051 -6.0308,0.11051c-2.09783,0 -5.50725,-0.78744 -8.39191,-3.9372c-2.88406,-3.15036 -11.01329,-10.76389 -11.01329,-26.25182c0,-15.48974 11.27537,-30.4523 12.84904,-32.55255c1.57367,-2.10085 22.18902,-33.88467 53.75666,-47.51511c7.50725,-3.24275 13.36897,-5.17875 17.93901,-6.62863c7.53805,-2.39553 14.39795,-2.05737 19.82005,-1.24698c6.0459,0.90278 18.61776,7.61172 21.24034,14.96196c2.62198,7.35206 2.62198,13.65218 1.83515,14.96438c-0.78623,1.3128 -2.88406,2.10024 -6.0308,3.67573m-57.41668,-78.39676l-0.04227,0c-18.78322,0.00725 -37.20593,5.05375 -53.27719,14.59058l-3.82246,2.26872l-39.61716,-10.39252l10.57428,38.62682l-2.48853,3.96075c-10.47826,16.66546 -16.01269,35.92755 -16.00423,55.70654c0.02295,57.71318 46.98069,104.6673 104.71923,104.6673c27.95895,-0.00966 54.24035,-10.91184 74.00425,-30.69808c19.76269,-19.78503 30.64011,-46.08455 30.62924,-74.05377c-0.02355,-57.71801 -46.98069,-104.67636 -104.67515,-104.67636m89.08698,193.76455c-23.77718,23.80496 -55.39796,36.9203 -89.08819,36.93419c-69.41608,0 -125.91248,-56.49277 -125.94025,-125.92999c-0.00906,-22.19687 5.78986,-43.86173 16.811,-62.96137l-17.86655,-65.26028l66.7621,17.51269c18.39493,-10.03322 39.10569,-15.32186 60.18359,-15.32851l0.05133,0l0.0006,0c69.40884,0 125.91006,56.4982 125.93844,125.93663c0.01268,33.65098 -13.07488,65.29229 -36.85206,89.09664"
          fill="#ffffff"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`WhatsApp renders the WhatsApp icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 400 400"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <g>
      <circle
        cx="200"
        cy="200"
        fill="#25D366"
        r="200"
      />
    </g>
    <g
      transform="rotate(-90 200.0000152587891,200)"
    >
      <g>
        <path
          d="m257.94568,174.77384c-3.14674,1.57488 -18.61776,9.1866 -21.50242,10.23793c-2.88406,1.05012 -4.98189,1.57428 -7.07971,-1.57488c-2.09783,-3.14976 -8.12863,-10.23853 -9.96437,-12.33877c-1.83515,-2.09964 -3.67089,-2.36353 -6.81763,-0.78744c-3.14674,1.57488 -13.28624,4.89734 -25.30556,15.61897c-9.35447,8.34421 -15.67029,18.64856 -17.50544,21.79892c-1.83575,3.15036 -0.19626,4.85326 1.37923,6.4221c1.41606,1.41002 3.14734,3.67573 4.72041,5.51329c1.57367,1.83696 2.09783,3.15036 3.14674,5.2494c1.04891,2.10085 0.52476,3.9378 -0.26268,5.51268c-0.78623,1.57488 -7.07971,17.06462 -9.70169,23.36595c-2.55435,6.13527 -5.14855,5.30435 -7.08032,5.40157c-1.83333,0.09118 -3.93358,0.11051 -6.0308,0.11051c-2.09783,0 -5.50725,-0.78744 -8.39191,-3.9372c-2.88406,-3.15036 -11.01329,-10.76389 -11.01329,-26.25182c0,-15.48974 11.27537,-30.4523 12.84904,-32.55255c1.57367,-2.10085 22.18902,-33.88467 53.75666,-47.51511c7.50725,-3.24275 13.36897,-5.17875 17.93901,-6.62863c7.53805,-2.39553 14.39795,-2.05737 19.82005,-1.24698c6.0459,0.90278 18.61776,7.61172 21.24034,14.96196c2.62198,7.35206 2.62198,13.65218 1.83515,14.96438c-0.78623,1.3128 -2.88406,2.10024 -6.0308,3.67573m-57.41668,-78.39676l-0.04227,0c-18.78322,0.00725 -37.20593,5.05375 -53.27719,14.59058l-3.82246,2.26872l-39.61716,-10.39252l10.57428,38.62682l-2.48853,3.96075c-10.47826,16.66546 -16.01269,35.92755 -16.00423,55.70654c0.02295,57.71318 46.98069,104.6673 104.71923,104.6673c27.95895,-0.00966 54.24035,-10.91184 74.00425,-30.69808c19.76269,-19.78503 30.64011,-46.08455 30.62924,-74.05377c-0.02355,-57.71801 -46.98069,-104.67636 -104.67515,-104.67636m89.08698,193.76455c-23.77718,23.80496 -55.39796,36.9203 -89.08819,36.93419c-69.41608,0 -125.91248,-56.49277 -125.94025,-125.92999c-0.00906,-22.19687 5.78986,-43.86173 16.811,-62.96137l-17.86655,-65.26028l66.7621,17.51269c18.39493,-10.03322 39.10569,-15.32186 60.18359,-15.32851l0.05133,0l0.0006,0c69.40884,0 125.91006,56.4982 125.93844,125.93663c0.01268,33.65098 -13.07488,65.29229 -36.85206,89.09664"
          fill="#ffffff"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`defaultIcon renders the defaultIcon icon from theme override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      Menu icon
    </title>
    <rect
      height="2"
      rx="1"
      width="16"
      x="4"
      y="11"
    />
    <rect
      height="2"
      rx="1"
      width="16"
      x="4"
      y="5"
    />
    <rect
      height="2"
      rx="1"
      width="16"
      x="4"
      y="17"
    />
  </svg>
</DocumentFragment>
`;

exports[`defaultIcon renders the defaultIcon icon with specified style 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      Menu icon
    </title>
    <rect
      height="2"
      rx="1"
      width="16"
      x="4"
      y="11"
    />
    <rect
      height="2"
      rx="1"
      width="16"
      x="4"
      y="5"
    />
    <rect
      height="2"
      rx="1"
      width="16"
      x="4"
      y="17"
    />
  </svg>
</DocumentFragment>
`;

exports[`defaultIcon renders the defaultIcon icon with title override 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #535353;
  color: #535353;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="mock-bui-1"
    >
      override title value
    </title>
    <rect
      height="2"
      rx="1"
      width="16"
      x="4"
      y="11"
    />
    <rect
      height="2"
      rx="1"
      width="16"
      x="4"
      y="5"
    />
    <rect
      height="2"
      rx="1"
      width="16"
      x="4"
      y="17"
    />
  </svg>
</DocumentFragment>
`;
